--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.10"
+  },
+  "dependencies": {
+    "d3": "^7.6.1",
+    "lodash.uniqueid": "^4.0.1"
   }
 }
